# Real_Estate_AI

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirement.txt
app/: __init__.py  __metadata__.py  alembic.ini  app.py
app/configs/: firebase_admin.py  openapi.py  pinecone.py  sqlalchemy.py  supabase.py  template.py
app/database/: utils.py
app/database/models/: __init__.py  address.py  article.py  banner.py  base.py  chat_message.py  chat_session.py  image.py  partner_registration.py  property.py  property_type.py  property_verification.py  review.py  role.py  tag.py  tourview.py  user.py  user_action.py  user_search.py
app/domains/address/: service.py
app/domains/admin/: controller.py
app/domains/auth/: controller.py  dtos.py  guard.py  provider.py  repository.py  service.py
app/domains/banner/: controller.py  service.py
app/domains/chat_message/: controller.py  dtos.py  service.py
app/domains/chat_session/: controller.py  service.py
app/domains/email/: service.py
app/domains/image/: service.py
app/domains/news/: controller.py  service.py
app/domains/notification/: service.py
app/domains/profile/: controller.py  dto.py  service.py
app/domains/properties/: controller.py  dtos.py  service.py
app/domains/property_types/: controller.py  service.py
app/domains/property_verification/: controller.py  dtos.py  service.py
app/domains/registrations/: controller.py  dtos.py  services.py
app/domains/review/: controller.py  dtos.py  service.py
app/domains/supabase/: service.py
app/domains/tourview/: controller.py  dtos.py  service.py  utils.py
app/domains/user_action/: controller.py  dtos.py  service.py
app/domains/user_search/: service.py
app/migrations/: env.py
app/migrations/versions/: 2025-03-13_initial_migration_108fec78e778.py  2025-03-15_init_favorites_schema_582c91e24415.py  2025-03-27_add_tag_and_image_table_debb6656cef2.py  2025-03-28_init_migrations_54266f582d3c.py  2025-03-30_add_description_to_property_b8a19e9520f4.py  2025-04-01_property_types_4f7db0245311.py  2025-04-04_add_banner_model_dfa22bca0d19.py  2025-04-04_review_model_2c2c36ac90d3.py  2025-04-10_make_table_for_recommender_system_997d3eb808d6.py  2025-04-15_add_searched_property_in_user_search_8012549c5e65.py  2025-04-22_remove_review_media_c048a31e131c.py  2025-05-21_add_chating_feature_68100405e15a.py  (+3 more)
app/security/: oauth2.py
app/seed/: seed.py
app/templates/: forget_password.html  reset_password.html
app/test/: conftest.py
app/utils/: verification.py
recommender/: analyze.py  chroma_utils  data.py  encoder.py  encoding.py  faiss.py  faiss_utils.py  inference.py  load_pinecone.py  main.py  reranker.py  tower.py  train.py  train_airbab.py  train_expedia.py  utils.py
scripts/: seed.py
(+15 files in other folders)
